force-app/main/default/objects/QuoteRequestHeader__c/QuoteRequestHeader__c.object-meta.xml
<CustomObject>
    <label>Quota Request Header</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas Request Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>