force-app/main/default/objects/QuoteRequestHeader__c/fields/AddQty_t__c.field-meta.xml
<CustomField>
    <fullName>AddQty_t__c</fullName>
    <label>Add Qty (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>