force-app/main/default/objects/QuoteRequestHeader__c/fields/NewQuote_t__c.field-meta.xml
<CustomField>
    <fullName>NewQuote_t__c</fullName>
    <label>New Quote (t)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>