force-app/main/default/objects/QuoteRequestHeader__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <formula>&apos;Quota Request #&apos; +  Name + &apos; &apos; +  
CASE(MarketSegment__c,
&apos;00011&apos;, &apos;Ukraine&apos;,
&apos;00004&apos;, &apos;Europe&apos;,
&apos;00002&apos;, &apos;MENA&apos;,
&apos;00001&apos;, &apos;Americas&apos;,
&apos;00010&apos;, &apos;CIS&apos;,
&apos;00006&apos;, &apos;KLW&apos;,
null)  
+ &apos; &apos; + TEXT(Year__c) + &apos;/&apos; +  TEXT(Month__c)</formula>
    <label>Request Name</label>
    <type>Text</type>
</CustomField>