force-app/main/default/objects/QuoteRequestHeader__c/fields/Route_Quotes_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Route_Quotes_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Quotes Hierarchy</label>
    <referenceTo>RouteQuotesH__c</referenceTo>
    <relationshipName>Quotes_Request_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>