force-app/main/default/objects/QuoteRequestHeader__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuoteRequestStatus</valueSetName>
    </valueSet>
</CustomField>