force-app/main/default/objects/QuoteRequestHeader__c/fields/UserSegment__c.field-meta.xml
<CustomField>
    <fullName>UserSegment__c</fullName>
    <formula>CASE(TEXT(Owner:User.SalesDivision__c),
  &apos;00001&apos;, &apos;America&apos;,
  &apos;00002&apos;, &apos;MENA&apos;,
  &apos;00004&apos;, &apos;Europe&apos;,
  &apos;00010&apos;, &apos;Ukraine&apos;,
  &apos;00011&apos;, &apos;CIS&apos;,
  &apos;00016&apos;, &apos;CU&apos;,
  &apos;00006&apos;, &apos;KLW&apos;,
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>