force-app/main/default/objects/QuoteRequestHeader__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>DateFrom__c</columns>
    <columns>DateTo__c</columns>
    <columns>Status__c</columns>
    <columns>Quote_t__c</columns>
    <columns>AddQty_t__c</columns>
    <columns>NewQuote_t__c</columns>
    <columns>Diff_Quote_t__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>